# beast-unifi-integration

./: .gitignore  .gitlab-ci.yml  PROJECT_REORGANIZATION.md  README.md  SETUP_SECRETS.md  pyproject.toml  sonar-project.properties  unifi_api_configuration.ipynb
.cursor/commands/: beast-skeleton.md
.github/: SETUP.md
.github/workflows/: ci.yml  publish.yml  sonarcloud.yml
.kiro/settings/rules/: beast-skeleton-requirement.md
.kiro/settings/templates/steering-custom/: docker-notebooks.md  notebooks.md
.kiro/specs/unifi-api-client/: init.json  requirements.md
.kiro/steering/: BEAST_SKELETON.md  product.md  structure.md  tech.md
docs/: agents.md  getting_started.md  gitlab_docker_setup.md  unifi_erd.mmd
examples/: basic_sync.py  fetch_local_devices.py
notebooks/: PROJECT_PATHS_SETUP.md  README.md  _setup_paths.py
notebooks/analysis/: unifi_data_analysis.ipynb  unifi_schema_database.ipynb
notebooks/discovery/: unifi_discovery.ipynb
notebooks/examples/: unifi_1password_configuration.ipynb  unifi_local_token_setup.ipynb
scripts/: debug_notebook_cell.py  launch_notebook_debug.py  setup_all_beast_secrets.sh  setup_github_secrets.sh
src/beast_unifi/: __init__.py  pyproject.toml
src/beast_unifi/api/: __init__.py  local_controller.py  site_manager.py
src/beast_unifi/credentials/: __init__.py  env.py  onepassword.py
src/beast_unifi/models/: __init__.py
src/beast_unifi/utils/: __init__.py
src/beast_unifi_servicenow/: __init__.py  pyproject.toml
src/beast_unifi_servicenow/integration/: __init__.py  transformers.py  unifi_sync.py
src/beast_unifi_servicenow/mid_server/docker/: Dockerfile
src/beast_unifi_servicenow/mid_server/docker/asset/: init  pre_stop.sh
src/beast_unifi_servicenow/models/: __init__.py
tests/: __init__.py  conftest.py
tests/fixtures/: .gitkeep
tests/integration/: test_sync.py
tests/unit/: test_api_clients.py  test_credentials.py
