[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beast-unifi-integration"
version = "0.1.0"
description = "UniFi network data integration with ServiceNow via Beastmaster framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Lou Springer", email = "lou@example.com"},
]
keywords = ["unifi", "servicenow", "integration", "network", "cmdb", "beastmaster"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# UV workspace configuration
[tool.uv]
workspace = true

[workspace]
members = [
    "src/beast_unifi",
    "src/beast_unifi_servicenow",
]

[project.urls]
Homepage = "https://github.com/nkllon/beast-unifi-integration"
Repository = "https://github.com/nkllon/beast-unifi-integration"
Documentation = "https://github.com/nkllon/beast-unifi-integration#readme"
"Bug Tracker" = "https://github.com/nkllon/beast-unifi-integration/issues"
"PyPI" = "https://pypi.org/project/beast-unifi/"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]

