[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beast-unifi"
version = "0.1.0"
description = "UniFi API client library for Beastmaster framework"
readme = "../../README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Lou Springer", email = "lou@example.com"},
]
keywords = ["unifi", "api", "network", "client"]
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]
optional-dependencies = {
    dev = [
        "pytest>=7.0.0",
        "pytest-cov>=4.0.0",
        "black>=23.0.0",
        "ruff>=0.1.0",
        "mypy>=1.0.0",
    ],
    onepassword = [
        "playwright>=1.40.0",
    ],
}

[project.urls]
Homepage = "https://github.com/nkllon/beast-unifi-integration"
Repository = "https://github.com/nkllon/beast-unifi-integration"
Documentation = "https://github.com/nkllon/beast-unifi-integration#readme"
"Bug Tracker" = "https://github.com/nkllon/beast-unifi-integration/issues"

[tool.hatch.build.targets.wheel]
packages = ["beast_unifi"]

